Nieuwe versie uploaden

--- a/Bekend.html
+++ b/Bekend.html
@@ -2,12 +2,16 @@
 <html>
   <head>
     <title>BEKEND</title>
-    <a href="index.html">startpagina</a>
-    <a href="Biografie.html">biografie</a>
-    <a href="Bekend.html">bekend</a>
-    <a href="Filmpje.html">Filmpje</a>
-    <a href="Contact.html">Contact</a>
+    <link rel="stylesheet" href="style/opmaak.css">
 <body>
+  <ul>
+    <li><a href="index.html">Startpagina</a></li>
+    <li><a href="Biografie.html">Biografie</a></li>
+    <li><a href="Filmpje.html">Filmpje</a></li>
+    <li><a href="Contact.html">Contact</a></li>
+    <li><a href="vragen.html">Vragen</a></li>
+    <li><a href="tabel.html">Microsoft Versies</a></li>
+  </ul>
     <h1>BEKEND</h1>
     <p>Bill Gates is bekend door zijn miljarden bedijf Microsoft dat,   hij gemaakt heeft in 1975 samen met Paul Allen.Jaren later
       werd
