--- a/Contact.html
+++ b/Contact.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head> <title>CONTACT GEGEVENS</title>
-    <a href="index.html">startpagina</a>
-    <a href="Biografie.html">biografie</a>
-    <a href="Bekend.html">bekend</a>
-    <a href="Filmpje.html">Filmpje</a>
-    <a href="Contact.html">Contact</a>
+    <link rel="stylesheet" href="style/opmaak.css">
   </head>
   <body>
+    <ul>
+      <li><a href="index.html">Startpagina</a></li>
+      <li><a href="Biografie.html">Biografie</a></li>
+      <li><a href="Bekend.html">Bekend</a></li>
+      <li><a href="Filmpje.html">Filmpje</a></li>
+      <li><a href="vragen.html">Vragen</a></li>
+      <li><a href="tabel.html">Microsoft Versies</a></li>
+    </ul>
     <h1>CONTACT GEGEVENS</h1>
-    <p>Hoi ik ben Sam ben twaalf jaar en zit in de coderclass</p><p>voor vragen 23512edu.msa.nl email</p>
+    <p>Hoi ik ben Sam en ik ben twaalf jaar en zit in de coderclass</p><p>voor vragen 23512@edu.msa.nl email</p>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1888.266212533343!2d4.917239396894214!3d52.36173488399432!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c609711f21356f%3A0x4698c2612bcb276b!2sMetis+Montessori+Lyceum!5e0!3m2!1snl!2snl!4v1507886013241" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
     <p>Dit is mijn school</p>
   </body>
