--- a/Filmpje.html
+++ b/Filmpje.html
@@ -1,17 +1,21 @@
 <html>
   <head>
     <title>FILMPJE</title>
-    <a href="index.html">startpagina</a>
-    <a href="Biografie.html">biografie</a>
-    <a href="Bekend.html">bekend</a>
-    <a href="Filmpje.html">Filmpje</a>
-    <a href="Contact.html">Contact</a>
+    <link rel="stylesheet" href="style/opmaak.css">
 </head>
   <body>
+    <ul>
+      <li><a href="index.html">Startpagina</a></li>
+      <li><a href="Biografie.html">Biografie</a></li>
+      <li><a href="Bekend.html">Bekend</a></li>
+      <li><a href="Contact.html">Contact</a></li>
+      <li><a href="vragen.html">Vragen</a></li>
+      <li><a href="tabel.html">Microsft Versies</a></li>
+    </ul>
     <h1>FILMPJE</h1>
-    <iframe width="560" height="315" 
-    src="https://www.youtube.com/embed/oFgEfqv-r6I" 
-    frameborder="0" allowfullscreen></iframe><p>Een fimpje over 
-Bill Gates  </p> 
+    <iframe width="560" height="315"
+    src="https://www.youtube.com/embed/oFgEfqv-r6I"
+    frameborder="0" allowfullscreen></iframe><p>Een fimpje over
+Bill Gates  </p>
   </body>
 </html>
