css bestand samen gevoegd

--- a/vragen.html
+++ b/vragen.html
@@ -1,7 +1,7 @@
 <html>
  <head>
  <title>VRAGEN</title>
-<link rel="stylesheet" href="style/vraagstyle.css">
+ <link rel="stylesheet" href="style/opmaak.css">
   </head>
   <body>
     <ul>
