--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" href="opmaak.css">
     <meta charset="utf-8">
-    <title></title>
+    <title>Sam</title>
   </head>
   <body>
+   <header>
+     <img src="https://i.imgur.com/2shdwke.jpg" alt="iets" width="400">
+    <h1>Sam</h1>
+   <nav>
 
+   </nav>
+   <section>
+    <p>Ik ben Sam </p>
+   </section>
   </body>
 </html>
