--- a/index.html
+++ b/index.html
@@ -3,17 +3,25 @@
   <head>
     <link rel="stylesheet" href="opmaak.css">
     <meta charset="utf-8">
-    <title>Sam</title>
+    <title>index</title>
   </head>
   <body>
    <header>
      <img src="https://i.imgur.com/2shdwke.jpg" alt="iets" width="400">
-    <h1>Sam</h1>
+  </header>
    <nav>
-
+     <ul>
+       <li><a href="index.html">Home</a></li>
+       <li><a href="#">Industrie</a></li>
+       <li><a href="#">Ruimtevaart</a></li>
+       <li><a href="#">Geneeskunde</a></li>
+     </ul>
    </nav>
    <section>
+     <h1>Sam</h1>
+     <article>
     <p>Ik ben Sam </p>
+  </article>
    </section>
   </body>
 </html>
