--- a/projecten.html
+++ b/projecten.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" href="opmaak.css">
     <meta charset="utf-8">
-    <title>index</title>
+    <title>projecten</title>
   </head>
   <body>
    <header>
