--- a/index.html
+++ b/index.html
@@ -19,11 +19,15 @@
    </nav>
    <div class="wrapper">
    <section>
-     <h1>Sam</h1>
+     <h1 class="paginatitel">Sam</h1>
      <article>
-    <p>Ik ben Sam </p>
+    <p>Hoi mijn naam is sam. Ik zit in 2v1 en mijn hobby is game ik speel,op dit moment fortnite en Black ops 4. </p>
   </article>
    </section>
   </div>
+  <footer>
+    <p>Posted by: Sam Louwerse</p>
+    <p>De beste website</p>
+  </footer>
  </body>
 </html>
